clean up code
remove unused code fragments, comments, exceptions and imports. Simplify code.